Fixed main title colour for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -216,7 +216,7 @@ body {
 }
 
 #slide-1 {
-	background-color: #2f2f2f;
+	color: #ffffff;
 	/*background-image: url('../images/bg1.jpg');
 	color: #ffffff;
     -webkit-background-size: 100%;
